feat: new tag module added
